fixed extra space mob

--- a/css/count.css
+++ b/css/count.css
@@ -2,15 +2,7 @@
 
 
 
-.mybox {
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  top: 85%;
-  width: 100vw;
-  height: 90px;
-  margin: -80px 0 0 -275px;
-}
+
 
 /*##################################*/
 .countdown {
@@ -66,6 +58,23 @@
   -ms-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
 }
+
+.mybox {
+  text-align: center;
+  position: absolute;
+  top: 85%;
+  left:23%;
+}
+
+@media only screen and (min-width: 768px){
+  .mybox {
+    text-align: center;
+    position: absolute;
+    top: 85%;
+    left:35%;
+  }
+}
+
 @media only screen and (max-width: 540px) {
   .countdown ul.flip {
     width: 25px !important;
