--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600");
-
+@font-face {
+  font-family: 'Avenir Next';
+  src: url("http://www.yoursite.com/fonts/Avenir_Next.otf"); /* File to be stored at your site */
+  }
 
 a.white-mode, a.white-mode:link, a.white-mode:visited, a.white-mode:active {
   font-family: "Montserrat";
@@ -18,9 +20,10 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  width: 100%;
-  height: 100%;
-  background: #000000;
+  width: 100vw;
+  height: 100vh;
+	background: #000000;
+	font-family: 'Avenir';
 }
 
 .contactus{
@@ -230,7 +233,7 @@ body {
 
 .sponsers img{
 	padding-top:10vh;
-  height: 80vh;
+  height: auto;
 	width: 70vw;
 	margin-left: 15vw;
 }
@@ -242,7 +245,7 @@ body {
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
-  font-family: "Avenir";
+  font-family: 'Avenir Next';
   text-align: center;
   width: 100%;
 }
